--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <div class="container">
        <div class="cards" style="background-image: url(images/poland1.jpg);">
-           <h3></h3>
+           <h3>UkrainianMan in Poland</h3>
        </div>
        <div class="cards" style="background-image: url(images/poland_winter.jpg);">
-           <h3></h3>
+           <h3>Winter</h3>
        </div>
        
        <div class="cards" style="background-image: url(images/avenu.jpg);">
-           <h3></h3>
+           <h3>Budapest</h3>
        </div>
     </div>
 <script src="js/main.js"></script>
