--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
        <div class="cards" style="background-image: url(images/poland_winter.jpg);">
            <h3>Winter</h3>
        </div>
-       
+       <div class="cards" style="background-image: url(images/vorosmarty.jpg);">
+           <h3>Vorosmarty</h3>
+       </div>
+       <div class="cards" style="background-image: url(images/circle.jpg);">
+           <h3>Circle</h3>
+       </div>
        <div class="cards" style="background-image: url(images/avenu.jpg);">
            <h3>Budapest</h3>
        </div>
