--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
            <h3>Budapest</h3>
        </div>
     </div>
+    <img src="images/pic1.png">
+    
 <script src="js/main.js"></script>
 </body>
 </html>
