--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
            <h3>Budapest</h3>
        </div>
     </div>
-    <img src="images/pic1.png">
+    <div><img src="images/pic1.png"></div>
     
 <script src="js/main.js"></script>
 </body>
