--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div class="container">
-       <div class="cards" style="background-image: url(images/poland1.jpg);">
-           <h3>UkrainianMan in Poland</h3>
+       <div class="cards" style="background-image: url(images/IMG_20220422_121841.jpg);">
+           <h3>Sakura</h3>
        </div>
        <div class="cards" style="background-image: url(images/poland_winter.jpg);">
            <h3>Winter</h3>
        </div>
-       <div class="cards" style="background-image: url(images/vorosmarty.jpg);">
-           <h3>Vorosmarty</h3>
+       <div class="cards" style="background-image: url(images/IMG_20221027_130829 (1).jpg);">
+           <h3>Zakarpattya</h3>
        </div>
        <div class="cards" style="background-image: url(images/circle.jpg);">
            <h3>Circle</h3>
