--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        <div class="cards" style="background-image: url(images/poland_winter.jpg);">
            <h3>Winter</h3>
        </div>
-       <div class="cards" style="background-image: url(images/IMG_20221027_130829 (1).jpg);">
+       <div class="cards" style="background-image: url(images/zakarpattya.jpg);">
            <h3>Zakarpattya</h3>
        </div>
        <div class="cards" style="background-image: url(images/circle.jpg);">
